[gd_scene load_steps=5 format=3 uid="uid://dfuhc7hw0sqwj"]

[ext_resource type="Script" uid="uid://dxw7sb23wfc56" path="res://script/select_level.gd" id="1_62unk"]
[ext_resource type="Texture2D" uid="uid://d154gfxyg3qxa" path="res://asset/stage.jpeg" id="1_hpupe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vf7qe"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62unk"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)

[node name="Select_Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62unk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.968627, 0.968627, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(638, 303)
scale = Vector2(0.46, 0.46)
texture = ExtResource("1_hpupe")

[node name="Button_level1" type="Button" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 411.0
offset_top = 448.0
offset_right = 511.0
offset_bottom = 548.0

[node name="Button_level2" type="Button" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 282.0
offset_top = 297.0
offset_right = 382.0
offset_bottom = 397.0

[node name="Button_Setting" type="Button" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = -2.0
offset_bottom = 98.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Setting"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -116.0
offset_right = 252.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 25

[node name="Button_Upgrade" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrade
"

[node name="Button_Store" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Store"

[node name="Button_Encyclopedia" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Encyclopedia"

[node name="Panel_Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -183.0
offset_right = 450.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_vf7qe")

[node name="Label" type="Label" parent="Panel_Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.0
offset_right = 86.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="Quit_Game" type="Button" parent="Panel_Settings"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -109.0
offset_right = 142.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "QUIT GAME"

[node name="Close_Settings" type="Button" parent="Panel_Settings"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 839.0
offset_top = 1.0
offset_right = 899.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 35
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Settings"]
layout_mode = 0
offset_left = 102.0
offset_top = 132.0
offset_right = 802.0
offset_bottom = 232.0
theme_override_constants/separation = 30

[node name="ColorRect" type="ColorRect" parent="Panel_Settings/VBoxContainer"]
custom_minimum_size = Vector2(700, 90)
layout_mode = 2

[node name="Label" type="Label" parent="Panel_Settings/VBoxContainer/ColorRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 182.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "MUSIC"

[node name="HSlider" type="HSlider" parent="Panel_Settings/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 0
offset_left = 250.0
offset_top = 35.0
offset_right = 670.0
offset_bottom = 51.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="ColorRect2" type="ColorRect" parent="Panel_Settings/VBoxContainer"]
custom_minimum_size = Vector2(700, 90)
layout_mode = 2

[node name="Label" type="Label" parent="Panel_Settings/VBoxContainer/ColorRect2"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 182.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "SFX"

[node name="HSlider" type="HSlider" parent="Panel_Settings/VBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 0
offset_left = 250.0
offset_top = 35.0
offset_right = 670.0
offset_bottom = 51.0

[node name="Panel_Upgrade" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -183.0
offset_right = 450.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_62unk")

[node name="Label" type="Label" parent="Panel_Upgrade"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.5
offset_top = 10.0
offset_right = 93.5
offset_bottom = 65.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "UPGRADE"
horizontal_alignment = 1

[node name="Close_Upgrade" type="Button" parent="Panel_Upgrade"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 839.0
offset_top = 1.0
offset_right = 899.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 35
text = "X"

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 61.0
grow_horizontal = 0
color = Color(0, 1, 1, 1)

[node name="FlowContainer" type="FlowContainer" parent="Panel_Upgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -156.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(350, 0)
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer"]
custom_minimum_size = Vector2(335, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer/ColorRect"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 89.0
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect"]
layout_mode = 0
offset_left = 109.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOWER NAME"

[node name="Label2" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 216.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "COST : 100"

[node name="Button" type="Button" parent="Panel_Upgrade/FlowContainer/ColorRect"]
layout_mode = 0
offset_left = 257.0
offset_top = 58.0
offset_right = 327.0
offset_bottom = 88.0
text = "BUY
"

[node name="ColorRect2" type="ColorRect" parent="Panel_Upgrade/FlowContainer"]
custom_minimum_size = Vector2(335, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer/ColorRect2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 89.0
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect2"]
layout_mode = 0
offset_left = 109.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOWER NAME"

[node name="Label2" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect2"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 216.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "COST : 100"

[node name="Button" type="Button" parent="Panel_Upgrade/FlowContainer/ColorRect2"]
layout_mode = 0
offset_left = 257.0
offset_top = 58.0
offset_right = 327.0
offset_bottom = 88.0
text = "BUY
"

[node name="ColorRect3" type="ColorRect" parent="Panel_Upgrade/FlowContainer"]
custom_minimum_size = Vector2(335, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer/ColorRect3"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 89.0
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect3"]
layout_mode = 0
offset_left = 109.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOWER NAME"

[node name="Label2" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect3"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 216.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "COST : 100"

[node name="Button" type="Button" parent="Panel_Upgrade/FlowContainer/ColorRect3"]
layout_mode = 0
offset_left = 257.0
offset_top = 58.0
offset_right = 327.0
offset_bottom = 88.0
text = "BUY
"

[node name="ColorRect4" type="ColorRect" parent="Panel_Upgrade/FlowContainer"]
custom_minimum_size = Vector2(335, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer/ColorRect4"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 89.0
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect4"]
layout_mode = 0
offset_left = 109.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOWER NAME"

[node name="Label2" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect4"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 216.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "COST : 100"

[node name="Button" type="Button" parent="Panel_Upgrade/FlowContainer/ColorRect4"]
layout_mode = 0
offset_left = 257.0
offset_top = 58.0
offset_right = 327.0
offset_bottom = 88.0
text = "BUY
"

[node name="ColorRect5" type="ColorRect" parent="Panel_Upgrade/FlowContainer"]
custom_minimum_size = Vector2(335, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer/ColorRect5"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 89.0
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect5"]
layout_mode = 0
offset_left = 109.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOWER NAME"

[node name="Label2" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect5"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 216.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "COST : 100"

[node name="Button" type="Button" parent="Panel_Upgrade/FlowContainer/ColorRect5"]
layout_mode = 0
offset_left = 257.0
offset_top = 58.0
offset_right = 327.0
offset_bottom = 88.0
text = "BUY
"

[node name="ColorRect6" type="ColorRect" parent="Panel_Upgrade/FlowContainer"]
custom_minimum_size = Vector2(335, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Upgrade/FlowContainer/ColorRect6"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 92.0
offset_bottom = 89.0
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="Label" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect6"]
layout_mode = 0
offset_left = 109.0
offset_top = 17.0
offset_right = 216.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TOWER NAME"

[node name="Label2" type="Label" parent="Panel_Upgrade/FlowContainer/ColorRect6"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 216.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "COST : 100"

[node name="Button" type="Button" parent="Panel_Upgrade/FlowContainer/ColorRect6"]
layout_mode = 0
offset_left = 257.0
offset_top = 58.0
offset_right = 327.0
offset_bottom = 88.0
text = "BUY
"

[connection signal="pressed" from="Button_level1" to="." method="_on_button_level_1_pressed"]
[connection signal="pressed" from="Button_level2" to="." method="_on_button_level_2_pressed"]
[connection signal="pressed" from="Button_Setting" to="." method="_on_button_setting_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_Upgrade" to="." method="_on_button_upgrade_pressed"]
[connection signal="pressed" from="Panel_Settings/Close_Settings" to="." method="_on_close_settings_pressed"]
[connection signal="value_changed" from="Panel_Settings/VBoxContainer/ColorRect/HSlider" to="." method="_on_slider_bgm_value_changed"]
[connection signal="pressed" from="Panel_Upgrade/Close_Upgrade" to="." method="_on_close_settings_pressed"]
